--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <section id="gameContainer"></section>
         <section id="scoreContainer">
-            <section class="scoreboard">Food: <span id="pointsEarned">0</span></section>
-            <section class="scoreboard">Blocks: <span id="pointsTraveled">0</span></section>    
+            <section class="scoreBoard">Food: <span id="pointsEarned">0</span></section>
+            <section class="scoreBoard">Blocks: <span id="pointsTraveled">0</span></section>    
         </section>
         <section id="onScreenControllers">
             <button id="leftButton">◀️</button>
